--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/work">Projects</a></li>
+                <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
                 <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-                <li><a href="#">Artwork</a></li>
+                <li><a href="{{ site.baseurl }}/artwork">Artwork</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
